--- a/resources/views/Page/Kwitansi.html
+++ b/resources/views/Page/Kwitansi.html
@@ -7,17 +7,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="{{ asset('assets/images/SmartPAs.png') }}" type="image/ico" />
-    <title>SILAJU</title>
+    <link rel="icon" href="https://penilaian-smk.madanidepok.sch.id/vendor/img/icon/logo1.png" type="image/ico" />
+    <title>SIPBS-SMK Madani Depok</title>
     <style type="text/css">
         body {
             font: 11px Arial, Helvetica, sans-serif;
             background: white;
         }
 
-        table {
-            font: 11px Arial, Helvetica, sans-serif;
-        }
 
         table tr td {
             font-size: 10px !important;
@@ -33,14 +30,10 @@
             font-weight: bold;
         }
 
-        table.header tr td img {
-            width: 75px;
-        }
-
         .kunjunganCetak {
-            width: 450px;
-            overflow: hidden;
-            padding: 2px;
+            width: 148;
+            height: 210;
+
 
         }
 
@@ -49,15 +42,11 @@
             width: 330px;
             margin-left: auto;
             margin-right: 0px;
-            margin-top: 10px;
             margin-bottom: 10px;
             font-weight: bold;
             font-size: 13px;
             float: left;
         }
-
-        #perkaraKunjungan {}
-
         #perkaraKunjungan img {
             width: 150px;
         }
@@ -77,6 +66,17 @@
         }
 
         table.barang tr td {
+            border-bottom: 1px solid #000;
+            border-right: 1px solid #000;
+            padding: 2px;
+        }
+        table.jumlah {
+            border-top: 1px solid #000;
+            border-left: 1px solid #000;
+            width: 100%;
+        }
+
+        table.jumlah tr td {
             border-bottom: 1px solid #000;
             border-right: 1px solid #000;
             padding: 2px;
@@ -130,172 +130,132 @@
             window.print();}*/
     </script>
 </head>
-
 <body onLoad="">
     <div class="kunjunganCetak">
-        <h1 class="title"></h1>
-        <div style="width:auto">
-            <table>
-                <tr>
-                    <td align="right">&nbsp;</td>
-                </tr>
-            </table>
             <table class="header">
                 <tr>
-                    <td rowspan="4">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Logo_of_the_Ministry_of_Law_and_Human_Rights_of_the_Republic_of_Indonesia.svg/1876px-Logo_of_the_Ministry_of_Law_and_Human_Rights_of_the_Republic_of_Indonesia.svg.png" width='70px'>
+                    <td >
+                        <img src="https://penilaian-smk.madanidepok.sch.id/vendor/img/icon/logo1.png" width="100px">
                     </td>
-                    <td align="center">
-                        <b>KEMENTERIAN HUKUM DAN HAK ASASI MANUSIA RI</b>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center">
-                        <b>KANTOR WILAYAH JAWA BARAT</b>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center">
-                        <b>LEMBAGA PEMASYARAKATAN KELAS IIA KARAWANG</b>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" style="border-bottom:thick">
-                        <b>
-                            Jl. Surotokunto No.km 6, Kondangjaya, Kec. Karawang Tim., Karawang, Jawa Barat 41371
+                    <td>
+                        <b style="font-size: 18px; padding-left: 20px;">YAYASAN PENDIDIKAN BINA MADANI</b><br>
+                        <b style="font-size: 25px; padding-left: 20px;">SMK MADANI DEPOK</b><br>
+                        <b style="font-size: 15px; padding-left: 20px;">TERAKREDITASI "A"</b><br>
+                        <b style="font-size: 10px; padding-left: 20px;">
+                            Jl. Mandor Samin Rt. 002 Rw. 006 Kel. Kalibaru Kec. Cilodong Kota Depok 16414</b> 
+                        </br><b style="font-size:10px; padding-left: 20px;">Telp. 021-77841453 Website : www.smk.madani.sch.id Email : smk.madanidepok@gmail.com
                         </b>
                     </td>
                 </tr>
             </table>
-
-            <div id="header-surat-izin">
-                <u>Surat Ijin</u>
+            <hr style="border: 1px solid;">
+            <div style="font-size: medium; text-align: center;">
+                <b>BUKTI PEMBAYARAN SISWA</b>
             </div>
-            <table id="biodataPengunjung">
+            <hr style="border: 1px solid;">
+            <table id="perkaraKunjungan" style="font-style: Segoe UI;">
                 <tr>
-                    <td class="label">No Identitas/NIK</td>
+                    <td class="label" style="font-weight: bold;">No Induk Siswa</td>
                     <td width="5">:</td>
-                    <td>123456</td>
-                    <td rowspan="5">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="" style="width:50px" /></td>
-                </tr>
-                <tr>
-                    <td class="label">Nama Pengunjung</td>
+                    <td width="200">123456</td>
+                    <td class="label" style="font-weight: bold;">Tahun Pendidikan</td>
                     <td width="5">:</td>
-                    <td></td>
+                    <td width="200">2023/2024</td>
                 </tr>
                 <tr>
-                    <td class="label">Jenis Kelamin</td>
+                    <td class="label" style="font-weight: bold;">Nama Siswa</td>
                     <td width="5">:</td>
-                    <td></td>
+                    <td width="200">Khoirul Fadilah</td>
+                    <td class="label" style="font-weight: bold;">Semester</td>
+                    <td width="5">:</td>
+                    <td width="200">Semester Genap</td>
                 </tr>
                 <tr>
-                    <td class="label" valign="top">Alamat</td>
-                    <td width="5px" valign="top">:</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td width="124">No. Telepon</td>
-                    <td width="7">:</td>
-                    <td colspan="2"></td>
-                </tr>
-                <tr>
-                    <td width="124">Jenis Layanana</td>
-                    <td width="7">:</td>
-                    <td colspan="2"></td>
-                </tr>
-                <tr>
-                    <td width="124">Sesi Kunjungan</td>
-                    <td width="7">:</td>
-                    <td colspan="2"></td>
-
-                </tr>
-                @endforeach
-                <tr>
-                    <td class="label" valign="top"><b>Barang Titipan</b></td>
-                    <td width="5" colspan="2" valign="top">:</td>
-                </tr>
-                <tr>
-                    <td colspan="3">
-                        <table class="barang" cellpadding="0" cellspacing="0">
-                            <tr>
-                                <td>No.</td>
-                                <td>Jenis Barang</td>
-                                <td>Nama Barang</td>
-                            </tr>
-
-                            <?php $tanggal = date('Y-m-d');
-                            $no = 1;; ?>
-
-
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </table>
-                    </td>
+                    <td class="label" style="font-weight: bold;">Kelas</td>
+                    <td width="5">:</td>
+                    <td>X - TKJ 1</td>
                 </tr>
             </table>
-            <br />
-            <table id="perkaraKunjungan">
+            <table class="barang" cellpadding="0" cellspacing="0">
+                <tr style="font-weight: bold;">
+                    <td>No</td>
+                    <td>Keterangan Pembayaran</td>
+                    <td>Jumlah (Rp.)</td>
+                    <td>Status </td>
+                </tr>
+                    <?php $tanggal = date('Y-m-d');
+                     $no = 1; ?>
                 <tr>
-                    <td colspan="4">Warga Binaan yang dikunjungi :</td>
+                    <td>1.</td>
+                    <td>Pembayaran SPP - Januari 2024</td>
+                    <td> Rp. 250.000</td>
+                    <td> Lunas</td>
                 </tr>
                 <tr>
-                    <td class="label">Nama</td>
-                    <td width="5">:</td>
-                    <td></td>
+                    <td>2.</td>
+                    <td>Pembayaran SPP - Februari 2024</td>
+                    <td> Rp. 250.000</td>
+                    <td> Lunas</td>
                 </tr>
                 <tr>
-                    <td class="label">Perkara </td>
-                    <td width="5">:</td>
-                    <td>{{ $wbp->kejahatan}}</td>
+                    <td>3.</td>
+                    <td>Pembayaran SPP - Maret 2024</td>
+                    <td> Rp. 250.000</td>
+                    <td> Lunas</td>
                 </tr>
                 <tr>
-                    <td class="label">Blok / Kamar Hunian</td>
-                    <td width="5">:</td>
-                    <td>{{$wbp->kamar }}</td>
+                    <td>4.</td>
+                    <td>Pembayaran SPP - April 2024</td>
+                    <td> Rp. 250.000</td>
+                    <td> Lunas</td>
                 </tr>
-                @endforeach
-            </table>
-            <br />
-            <table>
                 <tr>
-                    <td width="685" align="right"><span class="style1" style="padding-right:50px;">, Karawang
-                            <?php echo $date = date('Y-M-d'); ?></span></td>
+                    <td>5.</td>
+                    <td>Pembayaran SPP - Mei 2024</td>
+                    <td> Rp. 250.000</td>
+                    <td> Lunas</td>
+                </tr>
+                <tr>
+                    <td>6.</td>
+                    <td> Pembayaran SPP - Juni 2024</td>
+                    <td> Rp. 250.000</td>
+                    <td> Lunas</td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-weight: bold;">Total </td>
+                    <td colspan="2" style="font-weight: bold;"> Rp. 1.250.000</td>
                 </tr>
             </table>
             <table>
                 <tr>
-                    <td width="348" align="left"><span class="style1">Pengunjung <p></span></td>
-                    <td width="337" align="center"><span class="style1">
-                    </td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <td width="348" align="left"><span class="style1">({{ $users->nama}})</span></td>
-                    <td width="337" align="center"><span class="style1">(Petugas Layanan Kunjungan) </span></td>
-                </tr>
-            </table>
-            <br /><br />
-            <table>
-                <tr>
-                    <td style="color:#FF0000;">* Kunjungan Tidak Dipungut Biaya</td>
+                    <td width="900px"></td>
+                    <td width="200px">Depok, 24 April 2024</td>
                 </tr>
                 <tr>
-                    <td style="color:#FF0000;">* Apabila anda ada keluhan terhadap pelayanan kunjungan Silahkan SMS 08
-                    </td>
+                    <td width="900px"></td>
+                    <td width="200px">Bendahara</td>
+                </tr>
+                <tr>
+                    <td><br>
+                    <br>
+                    <br></td>
+                </tr>
+                <tr>
+                    <td width="900px"></td>
+                    <td width="200px" style="font-weight: bold;">Diki Setiawan, S.Kom<br></td>
                 </tr>
             </table>
-        </div>
+            <p style="color:#FF0000;"><i>Catatan : </i></p>
+            <ul style="color:#FF0000; font-size: 9px;">
+                <li>Disimpan sebagai bukti pembayaran yang SAH</li>
+                <li>Uang yang sudah dibayarkan tidak dapat dikembalikan</li>
+            </ul>
     </div>
-    <script>
+    <!--<script>
         window.onload = function() {
             window.print();
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
